Fixed layout problem on list letters on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -2198,6 +2198,7 @@ div.doc.not_current:hover{
 	position: relative;
 	margin: auto;
 	text-align: center;
+	overflow-x:auto; 
 }
 .bold_search{
 	font-weight: bold;
